Fixed bug: Table selection leaves white space around the image
I've removed background on figure and on cke_widget_wrapper_easyimage. Now it looks good.

--- a/contents.css
+++ b/contents.css
@@ -115,7 +115,6 @@ figure
 	text-align: center;
 	border: solid 1px #ccc;
 	border-radius: 2px;
-	background: rgba(0,0,0,0.05);
 	padding: 10px;
 	margin: 10px 20px;
 	display: inline-block;
